fix(ma-giam-gia): sua hien thi trang thai het han